- Improve text spacing of BeerSummary - Improve responsiveness of Beer page - Fix existing tests - Add tests for loaders

--- a/src/components/BeerSummary/BeerSummary.module.css
+++ b/src/components/BeerSummary/BeerSummary.module.css
@@ -4,11 +4,11 @@
   background: linear-gradient(#eeeeee, #dddddd);
   border-radius: 10px;
   padding: 0.5em;
-  width: 20em;
+  width: 18em;
 }
 
 .heading {
-  font-size: 2em;
+  font-size: 1.7em;
   font-weight: 500;
   margin-bottom: 0.1em;
 }
@@ -35,6 +35,10 @@
 }
 
 .content {
-  width: 75%;
-  margin-left: 1em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 66%;
+  margin-left: 0.5em;
+  margin-bottom: 0.2em;
 }
