--- a/src/containers/Beers/Beers.module.css
+++ b/src/containers/Beers/Beers.module.css
@@ -1,8 +1,9 @@
 .list {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .item {
-  margin: 0.2em;
+  margin: 0.3em;
 }
