--- a/src/containers/Page/Page.module.css
+++ b/src/containers/Page/Page.module.css
@@ -1,4 +1,5 @@
 .heading {
-  font-size: 4em;
-  font-weight: 600;
+  font-size: 3.5em;
+  font-weight: 700;
+  margin: 0.2em;
 }
